Bug 186745: on FreeBSD, use the getifaddrs function to query the presence of IPv4 and IPv6 network interfaces.